# myrls

./: CMakeLists.txt  README.md  apt_packages.txt
inc/: dirtree.h
inc/vector/: vector.h
src/: dirtree.cpp  main.cpp  vector.cpp
test_dir/: fork.txt  shared_mem.cpp
test_dir/d2/: A1.txt
